--- a/src/app/features/room/pages/video-room-page/video-room-page.scss
+++ b/src/app/features/room/pages/video-room-page/video-room-page.scss
@@ -6,7 +6,7 @@
   height: 100%;
   overflow: hidden;
   container-type: inline-size;
-  container-name: video-room;
+  container-name: video-room room-page;
 }
 
 .room-layout {
